Fix padding on mobile

--- a/src/pages/Events/Events.scss
+++ b/src/pages/Events/Events.scss
@@ -13,7 +13,7 @@
     font-family: 'Raleway', sans-serif;
     text-align: center;
     font-size: 2.25rem;
-    margin-bottom: 5vh;
+    margin: 10vh auto 2rem;
   }
 
   h2 {
@@ -31,16 +31,16 @@
 
   .events-list {
     margin: 0 auto 2rem;
-    padding: 0;
+    padding: 0 2rem;
 
     li {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-bottom: 1rem;
     }
 
     a {
-      padding-left: 0;
-      font-size: 2rem;
+      //padding-left: 0.25rem;
+      font-size: 1.5rem;
     }
   }
 
@@ -66,6 +66,18 @@
     p {
       max-width: 52rem;
       margin: 0 auto 2.5rem;
+    }
+
+    .events-list {
+      padding: 0;
+
+      li {
+        font-size: 1.75rem;
+      }
+
+      a {
+        font-size: 1.75rem;
+      }
     }
 
     padding: 0 10vw;
